--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
+# Core API
 flask==3.0.0
+gunicorn==21.2.0
+
+# ML & Data Science
 scikit-learn==1.3.2
 pandas==2.1.3
 numpy==1.26.2
-gunicorn==21.2.0
+xgboost==2.0.2
+imbalanced-learn==0.11.0
+shap==0.43.0
+
+# Visualization
+matplotlib==3.8.2
+seaborn==0.13.0
+
+# Frontend
 streamlit==1.29.0
 requests==2.31.0
+
+# Testing
+pytest==7.4.3
